--- a/src/components/notesScroller/style.module.css
+++ b/src/components/notesScroller/style.module.css
@@ -9,4 +9,24 @@
 
 .listItem {
    padding: 0 15px;
+   
 }
+
+.listItemContainer {
+   transition: all 0.3s ease-in-out;
+}
+
+.listItemContainer:hover {
+   background-color: rgba(255,255,255,0.5);
+   cursor: pointer;
+   -webkit-box-shadow: 1px 11px 34px -1px rgba(0,0,0,0.75);
+   -moz-box-shadow: 1px 11px 34px -1px rgba(0,0,0,0.75);
+   box-shadow: 1px 11px 34px -1px rgba(0,0,0,0.75)
+}
+
+
+@media(max-width: 767px){
+   .container{
+      display: none;
+   }
+ }
