--- a/src/components/notesScroller/style.module.css
+++ b/src/components/notesScroller/style.module.css
@@ -9,11 +9,11 @@
 
 .listItem {
    padding: 0 15px;
-   
 }
 
 .listItemContainer {
    transition: all 0.3s ease-in-out;
+   border-bottom: 1px solid #e8e8e8;
 }
 
 .listItemContainer:hover {
